--- a/Source/WebApplication1/WebApplication1/WebApplication1.csproj
+++ b/Source/WebApplication1/WebApplication1/WebApplication1.csproj
@@ -5,5 +5,9 @@
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
+    
+    <ItemGroup>
+        <InternalsVisibleTo Include="WebApplication1.IntegrationTests" />
+    </ItemGroup>
 
 </Project>
